# rfxh

./: CMakeLists.txt  LICENSE  README.md
.github/actions/telegram-notify/: action.yml
.github/workflows/: build.yml  release.yml
docs/: commands.md
src/: main.cpp
src/common/: types.hpp
src/config/: cli.cpp  cli.hpp  config.hpp  defaults.cpp  fieldmap.hpp  fields.hpp  loader.cpp
src/engine/: app.cpp  app.hpp
src/gather/: gather.cpp  gather.hpp  gather_win32.cpp
src/gather/desktop/: gtk.cpp  net.cpp  terminal_info.cpp  wm.cpp
src/gather/hardware/: battery.cpp  cpu.cpp  disk.cpp  display.cpp  gpu.cpp  memory.cpp
src/gather/system/: host.cpp  kernel.cpp  locale.cpp  os.cpp  packages.cpp  shell.cpp  uptime.cpp
src/logo/: colors.cpp  colors.hpp  detect.cpp  detect.hpp  library.hpp  loader.cpp  logo.hpp  processor.cpp
src/logo/builtin/: _registry.hpp
src/logo/builtin/and/: _registry.hpp  logo_an_android_12.hpp  logo_an_android_13.hpp  logo_an_android_14.hpp  logo_an_android_15.hpp  logo_an_android_16.hpp  logo_an_android_17.hpp  logo_an_robot.hpp  logo_android_small.hpp
src/logo/builtin/android/: _registry.hpp  logo_GrapheneOS.hpp  logo_an_android_13.hpp  logo_an_robot.hpp  logo_android.hpp  logo_android_small.hpp  logo_lineage_os.hpp
src/logo/builtin/bsd/: _registry.hpp  logo_BSD.hpp  logo_Bitrig.hpp  logo_DragonFly.hpp  logo_DragonFly_old.hpp  logo_DragonFly_small.hpp  logo_Freebsd.hpp  logo_GhostBSD.hpp  logo_HardenedBSD.hpp  logo_MidnightBSD.hpp  logo_NetBSD.hpp  logo_NetBSD2.hpp  logo_NetBSD_small.hpp  logo_OmniOS.hpp  logo_PCBSD.hpp  logo_PacBSD.hpp  logo_SmartOS.hpp  logo_freebsd_small.hpp  logo_nomadbsd.hpp  logo_openbsd.hpp  logo_openbsd_small.hpp  logo_solaris.hpp  logo_solaris_small.hpp
src/logo/builtin/linux/: _registry.hpp  logo_ALTLinux.hpp  logo_ARCHlabs.hpp  logo_Aeon.hpp  logo_AerynOS.hpp  logo_AerynOS_old.hpp  logo_Afterglow.hpp  logo_Almalinux.hpp  logo_Alpine.hpp  logo_Alpine2.hpp  logo_Alpine_small.hpp  logo_Alter.hpp  logo_Amazon.hpp  logo_Amazon_Linux.hpp  logo_Amiga.hpp  logo_AmogOS.hpp  logo_Anarchy.hpp  logo_AnushOS.hpp  logo_Aosc_OS.hpp  logo_Aosc_OS_Retro.hpp  logo_Aosc_OS_Retro_small.hpp  logo_Aosc_OS_old.hpp  logo_Aperture.hpp  logo_Apricity.hpp  logo_ArchBox.hpp  logo_ArchStrike.hpp  logo_Archcraft.hpp  logo_Archcraft2.hpp  logo_Arkane.hpp  logo_Armbian.hpp  logo_Armbian2.hpp  logo_Arya.hpp  logo_AsteroidOS.hpp  logo_Astra.hpp  logo_Ataraxia_Linux.hpp  logo_AthenaOS.hpp  logo_AthenaOS_old.hpp  logo_Aurora.hpp  logo_AxOS.hpp  logo_Azos.hpp  (+434 more)
src/logo/builtin/lnx/: _registry.hpp  logo_ALTLinux.hpp  logo_ARCHlabs.hpp  logo_Aeon.hpp  logo_Alpine.hpp  logo_Alter.hpp  logo_Amazon.hpp  logo_Amiga.hpp  logo_Antergos.hpp  logo_Aosc_OS_Retro.hpp  logo_Aosc_OS_Retro_small.hpp  logo_Aosc_OS_old.hpp  logo_Aperture.hpp  logo_Apricity.hpp  logo_ArchStrike.hpp  logo_Armbian2.hpp  logo_Arya.hpp  logo_Astra.hpp  logo_Ataraxia_Linux.hpp  logo_Azos.hpp  logo_BerserkArch.hpp  logo_BigLinux.hpp  logo_Bitrig.hpp  logo_BlackMesa.hpp  logo_BlackPanther.hpp  logo_Blackarch.hpp  logo_BlankOn.hpp  logo_Bodhi.hpp  logo_Bredos.hpp  logo_Calculate.hpp  logo_Calinix.hpp  logo_Calinix_small.hpp  logo_Carbs.hpp  logo_Cel.hpp  logo_CentOS_small.hpp  logo_Center.hpp  logo_Chakra.hpp  logo_ChaletOS.hpp  logo_Chapeau.hpp  logo_Chimera.hpp  (+191 more)
src/logo/builtin/mac/: _registry.hpp  logo_Apple.hpp  logo_Apple_small.hpp  logo_macOS.hpp  logo_macOS3.hpp  logo_macOS_small.hpp
src/logo/builtin/macos/: _registry.hpp  logo_Apple.hpp  logo_Apple_small.hpp  logo_Macaroni.hpp  logo_OSX.hpp  logo_OSX_small.hpp  logo_macOS.hpp  logo_macOS2.hpp  logo_macOS2_small.hpp  logo_macOS3.hpp  logo_macOS_small.hpp
src/logo/builtin/win/: _registry.hpp  logo_Pengwin.hpp  logo_Windows_11.hpp  logo_Windows_95.hpp
src/logo/builtin/windows/: _registry.hpp  logo_Windows.hpp  logo_Windows_11_small.hpp  logo_Windows_8.hpp  logo_Windows_Server_2025.hpp
src/platform/: compat.hpp  process.hpp  sysinfo.hpp  terminal.hpp
src/platform/posix/: process.cpp  sysinfo.cpp  terminal.cpp
src/platform/win32/: process.cpp  sysinfo.cpp  terminal.cpp
src/render/: constants.hpp  output.cpp  pointcloud.cpp  rasterizer.cpp  render.hpp
src/terminal/: CMakeLists.txt  terminal.cpp  terminal.hpp
src/text/: charweight.cpp  charweight.hpp  shading.cpp  shading.hpp  utf8.cpp  utf8.hpp
